--- a/public/css/style.css
+++ b/public/css/style.css
@@ -23,10 +23,12 @@ body {
 
 #sidebar {
   display: table-cell;
-  width: 15%;
+  width: 200px;
   vertical-align: top;
   background-color: #2c3147;
   position: relative;
+  left: 0;
+  height: 100%;
 }
 
 #sidebar a {
@@ -46,7 +48,7 @@ body {
   display: table-cell;
   width: 85%;
   vertical-align: top;
-  padding: 10px 0 0 10px;
+  padding: 20px 0 0 10px;
 }
 
 .logo {
@@ -70,6 +72,8 @@ body {
   left: 0;
   width: 100%;
 }
+
+
 
 /* ------------------------------ */
 
@@ -249,14 +253,15 @@ body {
 }
 
 
-/* CHAT */
+/* CHAT
 #chat {
   display: flex;
-  height: 600px;
+  height: 100%;
 }
 
 .rooms {
-  width: 15%;
+  width: 200px;
+  height: 100vh;
 }
 
 .last-message {
@@ -286,18 +291,13 @@ body {
 
 #send-message-form input {
   padding: 20px;
-  width: 500px;
+  width: 100%;
   height: 80px;
   border-radius: 10px;
   outline: none;
   border: none;
-}
-
-#send-message-form {
-  padding: 30px;
-  display: flex;
-  align-items: center;
-  justify-content: center;
+  position: absolute;
+  bottom: 0;
 }
 
 .btn-send {
@@ -330,8 +330,8 @@ body {
 
 #messages {
   overflow-y: scroll;
-  height: 100%;
-  width: 900px;
+  height: 600px;
+  width: 100%;
 }
 
 .material-symbols-outlined {
@@ -367,11 +367,15 @@ body {
 }
 
 .show-form {
-  display: block;
+  padding: 0px !important;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
+
 /* Chat -> Date */
-.sender-date {
+/* .sender-date {
   align-self: flex-end;
   font-size: 12px;
   color: #ffffff88;
@@ -381,6 +385,12 @@ body {
   align-self: flex-start;
   font-size: 12px;
   color: #00000088;
+} */
+
+/* Chat -> Room */
+/* .room-date {
+  font-size: 12px;
+  color: #ffffff88;
 }
 
 .room-item {
@@ -390,4 +400,4 @@ body {
 
 .room-item-active {
   background-color: #248bf5;
-}
+} */
