--- a/templates/equipe/new.html.twig
+++ b/templates/equipe/new.html.twig
@@ -1,9 +1,10 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Créer une équipe{% endblock %}
+{% block title %}Créer une équipe
+{% endblock %}
 
-{% block sidebar %}
-<div id="sidebar">
+{# {% block sidebar %} #}
+{# <div id="sidebar">
     <img class="logo" src="{{ asset('img/logo.png') }}" alt="Logo victoryforge" />
     <hr>
     <a href="{{ path('app_home') }}">Accueil</a>
@@ -11,17 +12,16 @@
     <a href="{{ path('app_tournoi_new') }}">Organiser un tournoi</a>
     <a href="">Paramètres du compte</a>
     <a href="{{ path('app_logout') }}">Se déconnecter</a>
-</div>
-{% endblock %}
+</div> #}
+{# {% endblock %} #}
 
-{% block body %}
-<h1>Créer une équipe</h1>
-{{ form_start(form) }}
-{{ form_row(form.jeu) }}
-{{ form_row(form.nomEquipe) }}
-{{ form_row(form.description) }}
-{{ form_row(form.imageFile) }}
-{{ form_row(form.submit) }}
-{{ form_end(form) }}
-
-{% endblock %}
+	{% block body %}<h1>
+	Créer une équipe
+	</h1>
+	{{ form_start(form) }}
+	{{ form_row(form.jeu) }}
+	{{ form_row(form.nomEquipe) }}
+	{{ form_row(form.description) }}
+	{{ form_row(form.imageFile) }}
+	{{ form_row(form.submit) }}
+{{ form_end(form) }}{% endblock %}
