--- a/templates/chat/index.html.twig
+++ b/templates/chat/index.html.twig
@@ -39,7 +39,7 @@
 			<div id="messages"></div>
 			<div class="message-form">
 				<form class="hide-form" id="send-message-form">
-					<input type="text" id="message-text" placeholder="Écrivez un message...">
+					<textarea type="text" id="message-text" placeholder="Écrivez un message..."></textarea>
 					<button class="btn-send" type="submit">
 						<span class="material-symbols-outlined">
 							send
