--- a/public/css/style.css
+++ b/public/css/style.css
@@ -21,28 +21,57 @@ body {
   height: 100%;
 }
 
-#sidebar {
-  display: table-cell;
+/* #sidebar {
   width: 200px;
-  vertical-align: top;
   background-color: #2c3147;
-  position: relative;
-  left: 0;
-  height: 100%;
+  position: sticky;
+  top: 0;
+  height: 100vh;
+  overflow-y: auto;
+  overflow-x: hidden;
+  max-width: fit-content;
+} */
+
+#sidebar {
+  /* La largeur de votre sidebar */
+  background-color: #2c3147;
+  /* La couleur de fond */
+  position: sticky;
+  /* Faites la barre latérale sticky */
+  top: 0;
+  /* Elle restera en haut lors du défilement */
+  height: 100vh;
+  /* La hauteur de votre sidebar sera de 100% de la hauteur de la vue */
+  max-height: 100vh;
+  /* S'assure que la hauteur ne dépasse pas la fenêtre d'affichage */
+  overflow-y: auto;
+  /* Ajoutez un défilement interne si nécessaire */
+  box-sizing: border-box;
+  /* Incluez le padding et la bordure dans la largeur/hauteur totale */
+  padding: 0;
+  /* Ajustez selon vos besoins */
+  margin: 0;
+  /* Ajustez selon vos besoins */
+}
+
+/* Réponses aux différentes tailles d'écran */
+@media (max-width: 768px) {
+  #sidebar {
+    width: 150px;
+    /* Une largeur plus petite pour les écrans plus petits */
+  }
 }
 
 #sidebar a {
-  display: block;
+  display: flex;
   padding: 10px;
   color: rgba(255, 255, 255, 0.5);
   margin: 15px 0 0 0;
   text-decoration: none;
+  align-items: center;
+  gap: 20px;
 }
 
-#sidebar a:hover {
-  background-color: rgba(255, 255, 255, 0.1);
-  color: white !important;
-}
 
 #content {
   display: table-cell;
@@ -66,14 +95,18 @@ body {
   display: flex;
   align-items: center;
   justify-content: center;
-  gap: 10px;
   position: absolute;
-  bottom: 10px;
-  left: 0;
+  bottom: 0;
   width: 100%;
+  background-color: #202430;
 }
 
-
+.profile-link {
+  align-items: center;
+  justify-content: center;
+  display: flex;
+  gap: 10px;
+}
 
 /* ------------------------------ */
 
