--- a/public/css/style.css
+++ b/public/css/style.css
@@ -55,6 +55,16 @@ body {
   /* Ajustez selon vos besoins */
 }
 
+.side-menu a:hover {
+  color: white !important;
+  background-color: rgba(255, 255, 255, 0.148);
+  transition: all 0.2s ease-in-out;
+}
+
+.side-menu a:hover span {
+  color: white !important;
+}
+
 /* Réponses aux différentes tailles d'écran */
 @media (max-width: 768px) {
   #sidebar {
@@ -79,12 +89,80 @@ body {
   display: table-cell;
   width: 85%;
   vertical-align: top;
+  /* padding: 20px; */
+}
+
+#jeu-select {
+  width: 250px;
+  height: 60px;
+  border-radius: none;
+  border: 1px solid rgba(255, 255, 255, 0.134);
+  background-color: #2c3147;
+  color: white;
+  box-shadow: none;
+}
+
+#jeu-select option {
+  background-color: #2c3147;
+  color: white;
+  border: none;
+  outline: none;
+  box-shadow: none;
+  border-radius: none;
+}
+
+.filter {
+  background-color: #2c3147;
+}
+
+.banner-theme {
+  background-image: url("../img/bg-test-hl.png");
+  /* Assurez-vous que le nom du fichier correspond à celui de votre image téléchargée */
+  background-size: cover;
+  /* Pour couvrir entièrement la div */
+  background-position: center center;
+  /* Centrer l'image horizontalement et verticalement */
+  background-repeat: no-repeat;
+  /* Pour ne pas répéter l'image */
+  color: white;
+  /* Pour une meilleure visibilité du texte sur un fond sombre */
+  text-align: center;
+  /* Centrer le texte dans la div */
+  padding: 100px 50px;
+  /* Ajoutez du padding pour donner de l'espace autour du texte */
+  /* Vous pouvez ajuster le padding selon la quantité d'espace souhaitée autour de votre texte */
+  width: auto;
+  height: 300px;
+}
+
+.banner-theme-txt {
+  width: 25%;
+  position: absolute;
+  text-align: left;
+  top: 20px;
+}
+
+.banner-theme-txt h1 {
+  font-size: 30px;
+  font-weight: bold;
+}
+
+.tr-main-wrapper {
   padding: 20px;
 }
 
-.logo {
-  display: block;
-  margin: 20px auto;
+
+.tr-content {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+/* #find-tr-h3 {
+  color: rgba(255, 255, 255, 0.368);
+} */
+
+.logo-underline {
   width: 90%;
 }
 
@@ -209,8 +287,7 @@ body {
   gap: 20px;
   margin-top: 20px;
   width: 960px;
-  justify-content: center;
-
+  align-content: center;
 }
 
 .tr-region p {
