--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -6,44 +6,61 @@
 
 
 {% block body %}
-	<select id="jeu-select">
-		<option value="">Sélectionnez un jeu</option>
-		{% for jeu in jeux %}
-			<option value="{{ jeu.id }}" {% if jeu.id == jeuSelectionne %} selected {% endif %}>{{ jeu.nomJeu }}</option>
-		{% endfor %}
-	</select>
-	<div class="tournois-list">
-		{% for tournoi in tournois %}
-			<a href="{{ path('app_tournoi_show', {'id' : tournoi.id }) }}">
-				<div class="tournament-item">
-					<div class="tr-container">
-						<div class="tr-banner">
-							<img class="tournoi-img" src="{{ vich_uploader_asset(tournoi, 'banniereTrFile') }}" alt="Bannière tournoi"/>
-							<p>{{ tournoi.nomTournoi }}</p>
+	<div class="banner-theme">
+		<div class="banner-theme-txt">
+			<h1>
+				CREER, CONCOURIR, CONQUERIR
+			</h1>
+			<p>
+				VictoryForge : Votre destination e-sport pour des tournois intenses, des équipes de compétition et des défis passionnants. Rejoignez la compétition, montez sur le podium de la victoire.
+			</p>
+		</div>
+	</div>
+	<div class="filter">
+		<select id="jeu-select">
+			<option value="">Sélectionnez un jeu</option>
+			{% for jeu in jeux %}
+				<option value="{{ jeu.id }}" {% if jeu.id == jeuSelectionne %} selected {% endif %}>{{ jeu.nomJeu }}</option>
+			{% endfor %}
+		</select>
+	</div>
+	<div class="tr-main-wrapper">
+		{# <h3 id="find-tr-h3">Trouver des tournois</h3> #}
+		<div class="tr-content">
+			<div class="tournois-list">
+				{% for tournoi in tournois %}
+					<a href="{{ path('app_tournoi_show', {'id' : tournoi.id }) }}">
+						<div class="tournament-item">
+							<div class="tr-container">
+								<div class="tr-banner">
+									<img class="tournoi-img" src="{{ vich_uploader_asset(tournoi, 'banniereTrFile') }}" alt="Bannière tournoi"/>
+									<p>{{ tournoi.nomTournoi }}</p>
+								</div>
+								<div class="tournament-time">
+									<p class="tr-calendar">
+										<span class="material-symbols-outlined">calendar_month</span>
+										{{ tournoi.dateDebut | format_datetime(locale='fr', pattern="EE dd MMM") }}
+									</p>
+									<p class="tr-schedule">
+										<span class="material-symbols-outlined">schedule</span>
+										{{ tournoi.dateDebut | format_datetime('none', 'short', locale='fr') }}
+									</p>
+								</div>
+								<div class="tr-item-line"></div>
+								<div class="tr-region">
+									<p>{{tournoi.region}}</p>
+								</div>
+								<div class="tr-item-line"></div>
+								<div class="organisateur-info">
+									<img class="logo-organisateur" src="{{ vich_uploader_asset(tournoi, 'logoFile') }}" alt="Logo organisateur">
+									<p>{{ tournoi.nomOrganisation }}</p>
+								</div>
+							</div>
 						</div>
-						<div class="tournament-time">
-							<p class="tr-calendar">
-								<span class="material-symbols-outlined">calendar_month</span>
-								{{ tournoi.dateDebut | format_datetime(locale='fr', pattern="EE dd MMM") }}
-							</p>
-							<p class="tr-schedule">
-								<span class="material-symbols-outlined">schedule</span>
-								{{ tournoi.dateDebut | format_datetime('none', 'short', locale='fr') }}
-							</p>
-						</div>
-						<div class="tr-item-line"></div>
-						<div class="tr-region">
-							<p>{{tournoi.region}}</p>
-						</div>
-						<div class="tr-item-line"></div>
-						<div class="organisateur-info">
-							<img class="logo-organisateur" src="{{ vich_uploader_asset(tournoi, 'logoFile') }}" alt="Logo organisateur">
-							<p>{{ tournoi.nomOrganisation }}</p>
-						</div>
-					</div>
-				</div>
-			</a>
-		{% endfor %}
+					</a>
+				{% endfor %}
+			</div>
+		</div>
 	</div>
 
 
@@ -52,11 +69,11 @@
 {% block javascripts %}
 	{# {{ encore_entry_script_tags('app') }} #}
 	<script src="{{ asset('js/select_jeu.js') }}"></script>
-	{# <script>
-		const eventSource = new EventSource("{{ mercure('https://example.com/rooms/1')|escape('js') }}");
-		eventSource.onmessage = event => {
-		const data = JSON.parse(event.data);
-		console.log(data);
-		};
-	</script> #}
+	<script>
+		const eventSource = new EventSource("{{ mercure('localhost:3000/.well-known/mercure?topic=http://exemple.com/rooms/1')|escape('js') }}");
+eventSource.onmessage = event => {
+const data = JSON.parse(event.data);
+console.log(data);
+};
+	</script>
 {% endblock %}
