--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -11,9 +11,7 @@
 		</title>
 		<link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0"/>
 		{% block stylesheets %}
-			<link
-			rel="stylesheet" href="{{ asset('css/style.css') }}"/>
-		{# {{ encore_entry_link_tags('app') }} #}
+			<link rel="stylesheet" href="{{ asset('css/style.css') }}"/>
 		{% endblock %}
 	</head>
 
