--- a/public/css/chat.css
+++ b/public/css/chat.css
@@ -4,7 +4,7 @@
 #chat {
     display: flex;
     max-width: 800px;
-    margin: auto;
+    margin: 20px auto;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
 }
 
