--- a/public/css/style.css
+++ b/public/css/style.css
@@ -408,11 +408,10 @@ body {
 .modal-content {
   background-color: #fefefe;
   margin: 15% auto;
-  /* 15% du haut et centré horizontalement */
   padding: 20px;
   border: 1px solid #888;
-  width: 80%;
-  /* Peut être ajusté */
+  width: fit-content;
+  background-color: #2c3147;
 }
 
 .close-btn {
@@ -420,6 +419,32 @@ body {
   float: right;
   font-size: 28px;
   font-weight: bold;
+}
+
+#pseudo {
+  height: 30px;
+  border: none;
+  border-radius: 5px;
+}
+
+button {
+  background-color: rgb(255, 0, 0);
+  color: white;
+  border: none;
+  border-radius: 5px;
+  padding: 5px;
+  margin: 5px;
+}
+
+/* ------ button disabled ----------- */
+button:disabled{
+  background-color: rgb(255, 0, 0);
+  color: white;
+  border: none;
+  border-radius: 5px;
+  padding: 5px;
+  margin: 5px;
+  opacity: 0.5;
 }
 
 .close-btn:hover,
