--- a/public/css/style.css
+++ b/public/css/style.css
@@ -384,6 +384,7 @@ body {
   height: 350px;
 }
 
+/* MODAL PARTICIPATION TOURNOI */
 .modal {
   display: none;
   /* Caché par défaut */
@@ -414,6 +415,12 @@ body {
   background-color: #2c3147;
 }
 
+#pseudo {
+  height: 30px;
+  border: none;
+  border-radius: 5px;
+}
+
 .close-btn {
   color: #aaa;
   float: right;
@@ -421,12 +428,7 @@ body {
   font-weight: bold;
 }
 
-#pseudo {
-  height: 30px;
-  border: none;
-  border-radius: 5px;
-}
-
+/* --------- button enabled & global button parameters ---------- */
 button {
   background-color: rgb(255, 0, 0);
   color: white;
@@ -434,10 +436,12 @@ button {
   border-radius: 5px;
   padding: 5px;
   margin: 5px;
+  cursor: pointer;
+
 }
 
 /* ------ button disabled ----------- */
-button:disabled{
+button:disabled {
   background-color: rgb(255, 0, 0);
   color: white;
   border: none;
@@ -445,6 +449,7 @@ button:disabled{
   padding: 5px;
   margin: 5px;
   opacity: 0.5;
+  cursor: not-allowed;
 }
 
 .close-btn:hover,
