--- a/public/css/style.css
+++ b/public/css/style.css
@@ -223,7 +223,7 @@ body {
   background-color: #ddd;
 }
 
-/* Show the dropdown menu (use JS to add this class to the .dropdown-content container when the user clicks on the dropdown button) */
+/* Show the dropdown menu */
 .show {
   display: block;
 }
