--- a/templates/home/check_mail.html.twig
+++ b/templates/home/check_mail.html.twig
@@ -1,13 +1,19 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <meta charset="UTF-8">
-        <title>Vérifier email</title>
-        <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 128 128%22><text y=%221.2em%22 font-size=%2296%22>⚫️</text></svg>">
-    </head>
-    <body>
-        <h1>
-            Veuillez vérifer votre boite email pour confirmer votre compte.
-        </h1>
-    </body>
+	<head>
+		<meta charset="UTF-8">
+		<title>Vérifier email</title>
+		<link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 128 128%22><text y=%221.2em%22 font-size=%2296%22>⚫️</text></svg>">
+	</head>
+	<body>
+		<h1>
+			Veuillez vérifer votre boite email pour confirmer votre compte.
+		</h1>
+
+		ul>
+		<li>
+			<a href="{{ path('app_home') }}">Revenir sur la page d'accueil</a>
+		</li>
+		<a href=""></a>
+	</body>
 </html>
