--- a/public/css/security.css
+++ b/public/css/security.css
@@ -22,6 +22,12 @@
     font-wei
 } */
 
+ul {
+    list-style: none;
+    margin: 5px 0;
+    padding: 0;
+}
+
 .input::placeholder {
     color: white;
 }
@@ -165,3 +171,5 @@ input[type=email]:focus {
 /* ----------------------------------------------------------- */
 
 /* ----------- LOGIN --------------- */
+
+
