--- a/public/css/style.css
+++ b/public/css/style.css
@@ -4,16 +4,37 @@
   box-sizing: border-box;
   font-family: "Poppins", sans-serif;
   text-decoration: none;
+  padding: 0;
+  margin: 0;
 }
 
-html {
+header {
+  padding: 20px;
+  width: 100%;
+  background-color: #ccc;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+div.overlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
   height: 100%;
+  background-color: rgba(0, 0, 0, 0.5);
+  z-index: 2;
+  display: none;
+}
+
+div.overlay.active {
+  display: block;
 }
 
 body {
-  margin: 0;
-  height: 100%;
   color: white;
+  min-height: 100vh;
 }
 
 #main-container {
@@ -22,27 +43,21 @@ body {
   height: 100%;
 }
 
-/* #sidebar {
-  width: 200px;
-  background-color: #2c3147;
-  position: sticky;
-  top: 0;
-  height: 100vh;
-  overflow-y: auto;
-  overflow-x: hidden;
-  max-width: fit-content;
-} */
-
 #sidebar {
   background-color: #2c3147;
-  position: sticky;
-  top: 0;
   height: 100vh;
-  max-height: 100vh;
+  width: 80%;
+  position: fixed;
+  top: 0;
+  left: -80%;
+  transition: all 0.3s ease-in-out;
+  z-index: 30;
+  overflow-x: hidden;
   overflow-y: auto;
-  box-sizing: border-box;
-  padding: 0;
-  margin: 0;
+}
+
+#sidebar.active {
+  left: 0;
 }
 
 .side-menu a:hover {
@@ -166,8 +181,6 @@ body {
   display: flex;
   align-items: center;
   justify-content: center;
-  position: absolute;
-  bottom: 0;
   width: 100%;
   background-color: #202430;
 }
@@ -277,7 +290,7 @@ body {
   grid-template-columns: repeat(3, 1fr);
   gap: 20px;
   margin-top: 20px;
-  width: 960px;
+  width: fit-content;
   align-content: center;
 }
 
@@ -475,6 +488,28 @@ button:disabled {
     display: grid;
     grid-gap: 10px;
     grid-template-columns: repeat(1, 1fr);
+  }
+}
+
+@media screen and (min-width: 768px) {
+
+  .mobile-header,
+  .top-menu .fa-xmark {
+    display: none;
+  }
+
+  #sidebar {
+    width: auto;
+    background-color: #2c3147;
+    height: 100vh;
+    position: sticky;
+    top: 0;
+    left: 0;
+    overflow-x: auto;
+    overflow-y: auto;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
   }
 }
 
