--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -14,9 +14,15 @@
 			<link rel="stylesheet" href="{{ asset('css/style.css') }}"/>
 		{% endblock %}
 		{# <script src="https://cdn.tiny.cloud/1/no-api-key/tinymce/6/tinymce.min.js" referrerpolicy="origin"></script> #}
+		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA==" crossorigin="anonymous" referrerpolicy="no-referrer"/>
 	</head>
 
 	<body>
+		<header class="mobile-header">
+			<i class="fa-solid fa-bars"></i>
+			<img src="{{ asset('img/logo.png') }}" alt="logo"/>
+		</header>
+		<div class="overlay"></div>
 		<div id="main-container">
 			{% block sidebar %}
 				{{ include ('include/sidebar.html.twig') }}
@@ -30,5 +36,30 @@
 				<script src="{{ asset('js/script.js') }}"></script>
 			{% endblock %}
 		</body>
+
+<script>
+
+// Mobile sidebar
+const openSidebar = document.querySelector('.fa-bars');
+const closeSidebar = document.querySelector('.fa-xmark');
+const sidebar = document.querySelector('#sidebar');
+const overlay = document.querySelector('.overlay');
+
+openSidebar.addEventListener('click', () => {
+	sidebar.classList.add('active');
+	overlay.classList.add('active');
+});
+
+closeSidebar.addEventListener('click', () => {
+	sidebar.classList.remove('active');
+	overlay.classList.remove('active');
+});
+
+overlay.addEventListener('click', () => {
+	sidebar.classList.remove('active');
+	overlay.classList.remove('active');
+});
+
+</script>
 
 	</html>
