--- a/templates/include/sidebar.html.twig
+++ b/templates/include/sidebar.html.twig
@@ -1,5 +1,6 @@
 <div id="sidebar" class="sticky-sidebar">
 	<div class="top-menu">
+		<i class="fa-solid fa-xmark"></i>
 		<a class="logo" href="{{ path('app_home') }}"><img src="{{ asset('img/logo.png') }}" alt="Logo victoryforge"/></a>
 		<hr class="logo-underline">
 		<div class="side-menu">
